# text_classification

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HF_UPLOAD_README.md  LICENSE  README.md  app.py  hf_upload_example.py  pyproject.toml  requirements.txt  run_training.py  setup.py  setup_upload_script.py  train_binary.py  train_binary_multiple.py  train_multiclass.py
.github/workflows/: ci.yml  release.yml
scripts/: export_and_upload_onnx.py  export_onnx.py  extract_issue_bodies.py  fetch_github_issues.py  verify_onnx_models.py
tdsuite/: __init__.py  cli.py  inference.py  split_data.py  train.py  upload_to_hf.py
tdsuite/config/: __init__.py  config.py
tdsuite/data/: __init__.py  data_splitter.py  dataset.py
tdsuite/models/: __init__.py  base.py  transformer.py
tdsuite/trainers/: __init__.py  base.py  td_trainer.py
tdsuite/utils/: __init__.py  data_utils.py  inference.py  logging.py  metrics.py  onnx_inference.py
tests/: conftest.py  test_cli.py  test_config.py  test_data_splitter.py  test_data_utils.py  test_dataset.py  test_extract_issue_bodies.py  test_inference.py  test_metrics.py  test_onnx_device.py  test_onnx_inference.py
text_classifier/: __init__.py
text_classifier/config/: config.py
text_classifier/data/: dataset.py
text_classifier/models/: model.py
text_classifier/trainers/: __init__.py  trainer.py
text_classifier/utils/: metrics.py
