[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdsuite"
dynamic = ["version"]
description = "A suite for technical debt classification using transformer models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Karthik Shivashankar", email = "karthik13sankar@outlook.com" },
]
keywords = [
    "technical-debt",
    "text-classification",
    "transformers",
    "onnx",
    "nlp",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core inference (CPU ONNX) — no GPU / PyTorch required
    "transformers>=4.15.0",
    "huggingface_hub>=0.16.0",
    "onnxruntime>=1.16.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "tqdm>=4.62.0",
    "requests>=2.28.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
# GPU inference: ONNX with CUDAExecutionProvider
gpu = [
    "onnxruntime-gpu>=1.16.0",
    "torch>=2.0.0",
    "datasets>=2.0.0",
]
# Full training stack (requires a CUDA GPU)
train = [
    "torch>=2.0.0",
    "datasets>=2.0.0",
    "wandb>=0.12.0",
    "codecarbon>=2.0.0",
    "evaluate>=0.4.0",
]
# ONNX model export (one-time operation, needs torch)
# onnxscript powers the TorchDynamo exporter required for transformers>=5.
onnx = [
    "onnx>=1.14.0",
    "onnxscript>=0.7.0",
    "torch>=2.0.0",
]
# optimum — on-the-fly ONNX export for models without a pre-exported model.onnx
# NOTE: optimum 2.x requires transformers<5 — pin accordingly if needed.
optimum = [
    "optimum[onnxruntime]>=1.14.0,<3.0.0",
    "transformers>=4.15.0,<5.0.0",
    "onnx>=1.14.0",
]
dev = [
    "black>=21.0.0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/KarthikShivasankar/text_classification"
Repository = "https://github.com/KarthikShivasankar/text_classification"
"Bug Tracker" = "https://github.com/KarthikShivasankar/text_classification/issues"

[project.scripts]
tdsuite-train = "tdsuite.train:main"
tdsuite-inference = "tdsuite.inference:main"
tdsuite-split-data = "tdsuite.split_data:main"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# When installing the optional [gpu] or [train] or [onnx] extras, pull torch
# from the CUDA 12.4 index so it includes GPU support.
[tool.uv.sources]
torch = { index = "pytorch-cuda" }

[tool.setuptools.dynamic]
version = { attr = "tdsuite.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["tdsuite*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tdsuite --cov-report=term-missing"
